--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
                 <div class="bloc">
                     <div class="text_bloc">
                     <h2>Vision</h2>
-                    <p>We believe in long-term growth with an emphasis on the potential of emerging markets. We also support the global need of feeding the growing population.</p>
+                    <p>We believe in long-term growth with an emphasis 
+                    on the potential of emerging markets. We also support 
+                    the global need of feeding the growing population.</p>
                     </div>
                     <img src="image 3.png" alt="">
                 </div>
@@ -57,7 +59,9 @@
                     <img src="btn_play.png" alt="">
                     <div class="text_bloc">
                     <h2>Mission</h2>
-                    <p>Breeding and marketing seeds for advanced field crops and vegetable varieties that provide an added value to all supply chain partners.</p>
+                    <p>Breeding and marketing seeds for advanced field crops 
+                        and vegetable varieties that provide an added value 
+                        to all supply chain partners.</p>
                     </div>
                 </div>
             </div>
@@ -69,7 +73,7 @@
                             <img src="image 4.png" alt="">
                             <div class="text_foot">
                                 <h4>Open field crop seeds</h4>
-                                <hr style="border: none; height: 2px; background-color: #57984C; width: 183px;">
+                                <hr style="border: none; height: 2px; background-color: #418036; width: 165px;">
                                 <p>wheat, cotton, legumes, hybrid confection sunflower</p>
                             </div>
                         </div>
@@ -77,7 +81,7 @@
                             <img src="image 5.png" alt="">
                             <div class="text_foot">
                                 <h4>Vegetable seeds</h4>
-                                <hr style="border: none; height: 2px; background-color: #57984C; width: 183px;">
+                                <hr style="border: none; height: 2px; background-color: #418036; width: 165px;">
                                 <p>hybrid open field tomatoes, eggplant, onion, paprika, etc.</p>
                             </div>
                         </div>
@@ -85,7 +89,7 @@
                             <img src="3 1.png" alt="">
                             <div class="text_foot">
                                 <h4>Ornamental seeds</h4>
-                                <hr style="border: none; height: 2px; background-color: #57984C; width: 183px;">
+                                <hr style="border: none; height: 2px; background-color: #418036; width: 165px;">
                                 <p>hybrid cut sunflowers, hybrid  patio tomatoes, Bells of Irland, etc.</p>
                             </div>
                         </div>
