--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
                 <div class="bloc">
                     <div class="text_bloc">
                     <h2>Vision</h2>
-                    <p>We believe in long-term growth with an emphasis 
-                    on the potential of emerging markets. We also support 
-                    the global need of feeding the growing population.</p>
+                    <p>We believe in long-term growth with an emphasis on the potential of emerging markets. We also support the global need of feeding the growing population.</p>
                     </div>
                     <img src="image 3.png" alt="">
                 </div>
@@ -59,9 +57,7 @@
                     <img src="btn_play.png" alt="">
                     <div class="text_bloc">
                     <h2>Mission</h2>
-                    <p>Breeding and marketing seeds for advanced field crops 
-                        and vegetable varieties that provide an added value 
-                        to all supply chain partners.</p>
+                    <p>Breeding and marketing seeds for advanced field crops and vegetable varieties that provide an added value to all supply chain partners.</p>
                     </div>
                 </div>
             </div>
