--- a/index1.html
+++ b/index1.html
@@ -110,42 +110,42 @@
                 </div>
                     <div class="fot">
                             <div class="toma1">
-                                <img src="image 8.png" alt="">
+                                <a href="/index2.html"><img src="image 8.png" alt=""></a>
                                 <div class="text_fot">
                                     <p>TAG 1000 (TAG 853)<br>Tomato Determinate Red Standard Round</p>
                                 </div>
                             </div>
                             <div class="toma2">
-                                <img src="image 9.png" alt="">
+                                <a href="/index2.html"><img src="image 9.png" alt=""></a>
                                 <div class="text_fot">
                                     <p>TAG 1001 (TAG 855)<br>Tomato Determinate Red Standard Round</p>
                                 </div>
                             </div>
                             <div class="toma3">
-                                <img src="image 10.png" alt="">
+                                <a href="/index2.html"><img src="image 10.png" alt=""></a>
                                 <div class="text_fot">
                                     <p>TAG 1002 (TAG 809)<br>Tomato Determinate Red Standard Round</p>
                                 </div>
                             </div>
                                 <div class="toma4">
-                                    <img src="image 11.png" alt="">
+                                    <a href="/index2.html"><img src="image 11.png" alt=""></a>
                                     <div class="text_fot">
                                         <p>TAG 1003 (TAG 834)<br>Tomato Determinate Red Standard Round</p>
                                     </div>
                                 </div>
                                 <div class="toma5">
-                                    <img src="image 12.png" alt="">
+                                    <a href="/index2.html"><img src="image 12.png" alt=""></a>
                                     <div class="text_fot">
                                         <p>TAG 1004 (TAG 848)<br>Tomato Determinate Red BEEF Round</p>
                                     </div>
                                 </div>
                                 <div class="toma6">
-                                    <img src="image 13.png" alt="">
+                                    <a href="/index2.html"><img src="image 13.png" alt=""></a>
                                     <div class="text_fot">
                                         <p>TAG 1006 (TAG 898)<br>Tomato Determinate Red Elongated</p>
                                     </div>
                                     <div class="toma7">
-                                        <img src="image 14.png" alt="">
+                                        <a href="/index2.html"><img src="image 14.png" alt=""></a>
                                         <div class="text_fot">
                                             <p>TAG 1007 (TAG 816)<br>Tomato Determinate Red Elongated</p>
                                         </div>
