--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <a href="/index1.html"><li>Products</li></a>
                         <a href=""><li>Services</li></a>
                         <a href=""><li>R&D</li></a>
-                        <a href=""><li>Contact</li></a>
+                        <a href="/index3.html"><li>Contact</li></a>
                     </ul>
                   </div>
                 </div>
