--- a/index2.html
+++ b/index2.html
@@ -22,7 +22,7 @@
                         <a href="/index1.html"><li>Products</li></a>
                         <a href=""><li>Services</li></a>
                         <a href=""><li>R&D</li></a>
-                        <a href=""><li>Contact</li></a>
+                        <a href="/index3.html"><li>Contact</li></a>
                     </ul>
                 </div>
             </div>
@@ -109,11 +109,11 @@
                     <ul>
                         <a href="/index.html"><li>PROFILE</li></a>
                         <a href=""><li>MANAGMENT</li></a>
-                        <a href=""><li>PRODUCTS</li></a>
+                        <a href="/index1.html"><li>PRODUCTS</li></a>
                         <a href=""><li>R&D</li></a>
                         <a href=""><li>LINKS</li></a>
                         <a href=""><li>SITEMAP</li></a>
-                        <a href=""><li>CONTACT</li></a>
+                        <a href="/index3.html"><li>CONTACT</li></a>
                     </ul>
                   </div>
                   <div class="social">
