--- a/index2.html
+++ b/index2.html
@@ -20,7 +20,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="responsive.css">
   </head>
   <body>
@@ -28,7 +28,7 @@
       <div class="header-all">
         <div class="head">
           <div class="top-logo-img">
-            <img class="burger-menu" src="./img/menu.svg" />
+            <img class="burger-menu" src="img/menu.svg" />
             <img class="logotip" src="img/logo.png" />
           </div>
           <div class="HeadSearch">
@@ -37,22 +37,22 @@
               <img class="SearchIcon" src="img/751463.png" />
             </div>
             <ul class="Menu">
-              <li class="MenuItem"><a href="./index.html">Home</a></li>
+              <li class="MenuItem"><a href="/index.html">Home</a></li>
               <li class="MenuItem">Company Profile</li>
               <li class="MenuItem">Products</li>
               <li class="MenuItem">Services</li>
               <li class="MenuItem">R&D</li>
-              <li class="MenuItem"><a href="./Contact.html">Contact</a></li>
+              <li class="MenuItem"><a href="/index3.html">Contact</a></li>
             </ul>
           </div>
         </div>
       </div>
-<img style="width: 100%; height: 480px"  src="./img/image 7.png" />
+<img style="width: 100%; height: 480px"  src="img/image 7.png" />
       
       <div class="middle-all">
         <div class="textBlock">
           <h4>Agridera Fresh Market Tomato Hybrids</h4>
-          <img style="width: 35px; height: 35px" src="./img/cross.svg" />
+          <img style="width: 35px; height: 35px" src="img/cross.svg" />
           <p>
             Agridera aims to be one of the world's leading companies in the
             breeding, production, and marketing of tomato seeds. We invest
@@ -128,7 +128,7 @@
                   TAG 1000 (TAG 853)<br />
                   Tomato Determinate Red Standard Round
                 </p>
-                <img src="./img/tomato-1.svg" />
+                <img src="img/tomato-1.svg" />
               </div>
             </figure>
             <figure id="tomato">
@@ -137,17 +137,17 @@
                   TAG 1000 (TAG 853)<br />
                   Tomato Determinate Red Standard Round
                 </p>
-                <img src="./img/tomato-2.svg" />
+                <img src="img/tomato-2.svg" />
               </div>
             </figure>
             <figure id="tomato">
               <div>
-                <a style="color: #57984c" href="./Tomato-one.html">
+                <a style="color: #57984c" href="index1.html">
                   <p>
                     TAG 1000 (TAG 853)<br />
                     Tomato Determinate Red Standard Round
                   </p>
-                  <img src="./img/tomato-3.svg" />
+                  <img src="img/tomato-3.svg" />
                 </a>
               </div>
             </figure>
@@ -156,7 +156,7 @@
                 <p>
                   TAG 1000 (TAG 853)<br />Tomato Determinate Red Standard Round
                 </p>
-                <img src="./img/tomato-4.svg" />
+                <img src="img/tomato-4.svg" />
               </div>
             </figure>
             <figure id="tomato">
@@ -165,7 +165,7 @@
                   TAG 1000 (TAG 853)<br />
                   Tomato Determinate Red Standard Round
                 </p>
-                <img src="./img/tomato-5.svg" />
+                <img src="img/tomato-5.svg" />
               </div>
             </figure>
             <figure id="tomato">
@@ -174,7 +174,7 @@
                   TAG 1000 (TAG 853)<br />
                   Tomato Determinate Red Standard Round
                 </p>
-                <img src="./img/tomato-6.svg" />
+                <img src="img/tomato-6.svg" />
               </div>
             </figure>
             <figure id="tomato">
@@ -183,7 +183,7 @@
                   TAG 1000 (TAG 853)<br />
                   Tomato Determinate Red Standard Round
                 </p>
-                <img src="./img/tomato-7.svg" />
+                <img src="img/tomato-7.svg" />
               </div>
             </figure>
             <figure id="tomato">
@@ -192,7 +192,7 @@
                   TAG 1000 (TAG 853)<br />
                   Tomato Determinate Red Standard Round
                 </p>
-                <img src="./img/tomato-8.svg" />
+                <img src="img/tomato-8.svg" />
               </div>
             </figure>
           </div>
@@ -213,11 +213,11 @@
           </div>
 
           <div id="icons">
-            <a href="#"><img src="./img/Ico_fb.svg" alt="" /></a>
-            <a href="#"><img src="./img/Ico_inst.svg" alt="" /></a>
-            <a href="#"><img src="./img/Ico_tube.svg" alt="" /></a>
-            <a href="#"><img src="./img/Ico_tw.svg" alt="" /></a>
-            <a href="#"><img src="./img/linkedin 5 4.svg" alt="" /></a>
+            <a href="#"><img src="img/Ico_fb.svg" alt="" /></a>
+            <a href="#"><img src="img/Ico_inst.svg" alt="" /></a>
+            <a href="#"><img src="img/Ico_tube.svg" alt="" /></a>
+            <a href="#"><img src="img/Ico_tw.svg" alt="" /></a>
+            <a href="#"><img src="img/linkedin 5 4.svg" alt="" /></a>
           </div>
         </div>
         <div id="footer_second">
