--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.8"></script>
+
+
     <title>Homepage</title>
     <link
       rel="stylesheet"
@@ -47,7 +50,7 @@
       <div class="header">
         <div class="head">
           <div class="top-logo-img">
-            <img class="burger-menu" src="./img/menu.svg" />
+            <img class="burger-menu" src="img/menu.svg" />
             <img class="logotip" src="img/logo.png" />
           </div>
           <div class="HeadSearch">
@@ -58,10 +61,10 @@
             <ul class="Menu">
               <li class="MenuItem">Home</li>
               <li class="MenuItem">Company Profile</li>
-              <li class="MenuItem"><a href="./index1.html">Products</a></li>
+              <li class="MenuItem"><a href="/index1.html">Products</a></li>
               <li class="MenuItem">Services</li>
               <li class="MenuItem">R&D</li>
-              <li class="MenuItem"><a href="./index3.html">Contact</a></li>
+              <li class="MenuItem"><a href="/index3.html">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -188,11 +191,11 @@
           </div>
 
           <div id="icons">
-            <a href="#"><img src="./img/Ico_fb.svg" alt="" /></a>
-            <a href="#"><img src="./img/Ico_inst.svg" alt="" /></a>
-            <a href="#"><img src="./img/Ico_tube.svg" alt="" /></a>
-            <a href="#"><img src="./img/Ico_tw.svg" alt="" /></a>
-            <a href="#"><img src="./img/linkedin 5 4.svg" alt="" /></a>
+            <a href="#"><img src="img/Ico_fb.svg" alt="" /></a>
+            <a href="#"><img src="img/Ico_inst.svg" alt="" /></a>
+            <a href="#"><img src="img/Ico_tube.svg" alt="" /></a>
+            <a href="#"><img src="img/Ico_tw.svg" alt="" /></a>
+            <a href="#"><img src="img/linkedin 5 4.svg" alt="" /></a>
           </div>
         </div>
         <div id="footer_second">
