--- a/index1.html
+++ b/index1.html
@@ -20,15 +20,15 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0"
     />
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./responsive.css" />
+    <link rel="stylesheet" href="header.css" />
+    <link rel="stylesheet" href="responsive.css" />
   </head>
   <body>
     <div class="container">
       <div class="header-all">
         <div class="head">
           <div class="top-logo-img">
-            <img class="burger-menu" src="./img/menu.svg" />
+            <img class="burger-menu" src="img/menu.svg" />
             <img class="logotip" src="img/logo.png" />
           </div>
           <div class="HeadSearch">
@@ -37,12 +37,12 @@
               <img class="SearchIcon" src="img/751463.png" />
             </div>
             <ul class="Menu">
-              <li class="MenuItem"><a href="./index.html">Home</a></li>
+              <li class="MenuItem"><a href="/index.html">Home</a></li>
               <li class="MenuItem">Company Profile</li>
-              <li class="MenuItem"><a href="./index1.html"></a>Products</li>
+              <li class="MenuItem"><a href="/index1.html"></a>Products</li>
               <li class="MenuItem">Services</li>
               <li class="MenuItem">R&D</li>
-              <li class="MenuItem"><a href="./index3.html"></a>Contact</li>
+              <li class="MenuItem"><a href="/index3.html"></a>Contact</li>
             </ul>
           </div>
         </div>
@@ -51,7 +51,7 @@
         <div class="return-link">
           <div>
             <p>
-              <a href="/index1.html">
+              <a href="/index2.html">
                 <i class="fa-solid fa-arrow-left"></i>
                 Return to all tomatoes
               </a>
@@ -67,10 +67,10 @@
               </strong>
             </h1>
             <p>
-              <img src="./img/cross.svg" />
+              <img src="img/cross.svg" />
             </p>
             <div class="red-text">
-              <img src="./img/Group 17.png" />
+              <img src="img/Group 17.png" />
               <p>
                 Very high yield and<br />
                 excellent fruits quality!
@@ -94,7 +94,7 @@
             </ul>
           </div>
           <div class="right-text">
-            <img width="540px" height="498px" src="./img/tomato-3-2.svg" />
+            <img width="540px" height="498px" src="img/tomato-3-2.svg" />
             <div class="download-block">
               <button>
                 <i class="fa-solid fa-file-pdf fa-2xl"></i>
@@ -128,11 +128,11 @@
           </div>
 
           <div id="icons">
-            <a href="#"><img src="./img/Ico_fb.svg" alt="" /></a>
-            <a href="#"><img src="./img/Ico_inst.svg" alt="" /></a>
-            <a href="#"><img src="./img/Ico_tube.svg" alt="" /></a>
-            <a href="#"><img src="./img/Ico_tw.svg" alt="" /></a>
-            <a href="#"><img src="./img/linkedin 5 4.svg" alt="" /></a>
+            <a href="#"><img src="img/Ico_fb.svg" alt="" /></a>
+            <a href="#"><img src="img/Ico_inst.svg" alt="" /></a>
+            <a href="#"><img src="img/Ico_tube.svg" alt="" /></a>
+            <a href="#"><img src="img/Ico_tw.svg" alt="" /></a>
+            <a href="#"><img src="img/linkedin 5 4.svg" alt="" /></a>
           </div>
         </div>
         <div id="footer_second">
