--- a/index3.html
+++ b/index3.html
@@ -20,15 +20,15 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0"
     />
-    <link rel="stylesheet" href="./header.css" />
-    <link rel="stylesheet" href="./responsive.css" />
+    <link rel="stylesheet" href="header.css" />
+    <link rel="stylesheet" href="responsive.css" />
   </head>
   <body>
     <div class="container">
       <div class="header-all">
         <div class="head">
           <div class="top-logo-img">
-            <img class="burger-menu" src="./img/menu.svg" />
+            <img class="burger-menu" src="img/menu.svg" />
             <img class="logotip" src="img/logo.png" />
           </div>
           <div class="HeadSearch">
@@ -39,18 +39,18 @@
             <ul class="Menu">
               <li class="MenuItem"><a href="index.html">Home</a></li>
               <li class="MenuItem">Company Profile</li>
-              <li class="MenuItem"><a href="./Tomato-All.html">Products</a></li>
+              <li class="MenuItem"><a href="index1.html">Products</a></li>
               <li class="MenuItem">Services</li>
               <li class="MenuItem">R&D</li>
-              <li class="MenuItem">Contact</li>
+              <li class="MenuItem"><a href="index3.html">Contact</a></li>
             </ul>
           </div>
         </div>
       </div>
-      <img style="width: 100%; height: 480px" src="./img/image 7.jpg" />
+      <img style="width: 100%; height: 480px" src="img/image 7.jpg" />
       <div class="contant-contact">
         <h1>Contact us</h1>
-        <img style="margin-bottom: 49px" src="./img/xrest.png" />
+        <img style="margin-bottom: 49px" src="img/xrest.png" />
         <form class="content-anketa">
           <div class="left-content">
             <label>Name *</label><br />
@@ -113,11 +113,11 @@
           </div>
 
           <div id="icons">
-            <a href="#"><img src="./img/Ico_fb.svg" alt="" /></a>
-            <a href="#"><img src="./img/Ico_inst.svg" alt="" /></a>
-            <a href="#"><img src="./img/Ico_tube.svg" alt="" /></a>
-            <a href="#"><img src="./img/Ico_tw.svg" alt="" /></a>
-            <a href="#"><img src="./img/linkedin 5 4.svg" alt="" /></a>
+            <a href="#"><img src="img/Ico_fb.svg" alt="" /></a>
+            <a href="#"><img src="img/Ico_inst.svg" alt="" /></a>
+            <a href="#"><img src="img/Ico_tube.svg" alt="" /></a>
+            <a href="#"><img src="img/Ico_tw.svg" alt="" /></a>
+            <a href="#"><img src="img/linkedin 5 4.svg" alt="" /></a>
           </div>
         </div>
         <div id="footer_second">
