--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
       <div class="header">
         <div class="head">
           <div class="top-logo-img">
-            <img class="burger-menu" src="img/menu.svg" />
-            <img class="logotip" src="img/logo.png" />
+            <img class="burger-menu" src="menu.svg" />
+            <img class="logotip" src="logo.png" />
           </div>
           <div class="HeadSearch">
             <div class="search">
               <input class="SearchInput" type="text" placeholder="Search" />
-              <img class="SearchIcon" src="img/ico_search.png" />
+              <img class="SearchIcon" src="ico_search.png" />
             </div>
             <ul class="Menu">
               <li class="MenuItem">Home</li>
