--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       <div class="header">
         <div class="head">
           <div class="top-logo-img">
-            <img class="burger-menu" src="menu.svg" />
-            <img class="logotip" src="logo.png" />
+            <img class="burger-menu" src="img/menu.svg" />
+            <img class="logotip" src="img/logo.png" />
           </div>
           <div class="HeadSearch">
             <div class="search">
