--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
       <div class="header">
         <div class="head">
           <div class="top-logo-img">
-            <img class="burger-menu" src="img/menu.svg" />
-            <img class="logotip" src="img/logo.png" />
+            <img class="burger-menu" src="./img/menu.svg" />
+            <img class="logotip" src="./img/logo.png" />
           </div>
           <div class="HeadSearch">
             <div class="search">
               <input class="SearchInput" type="text" placeholder="Search" />
-              <img class="SearchIcon" src="ico_search.png" />
+              <img class="SearchIcon" src="./img/ico_search.png" />
             </div>
             <ul class="Menu">
               <li class="MenuItem">Home</li>
@@ -78,31 +78,31 @@
       <div class="middle">
         <ul class="MiddleList">
           <li class="MiddleItem">
-            <img class="MiddleIco" src="img/1.svg" />
+            <img class="MiddleIco" src="./img/1.svg" />
             <p>Wheat</p>
           </li>
           <li class="MiddleItem">
-            <img class="MiddleIco" src="img/2.svg" />
+            <img class="MiddleIco" src="./img/2.svg" />
             <p>Confection Watermelon</p>
           </li>
           <li class="MiddleItem">
-            <img class="MiddleIco" src="img/3.svg" />
+            <img class="MiddleIco" src="./img/3.svg" />
             <p>Clover</p>
           </li>
           <li class="MiddleItem">
-            <img class="MiddleIco" src="img/4.svg" />
+            <img class="MiddleIco" src="./img/4.svg" />
             <p>Confection Sunflower</p>
           </li>
           <li class="MiddleItem">
-            <img class="MiddleIco" src="img/5.svg" />
+            <img class="MiddleIco" src="./img/5.svg" />
             <p>Tomato</p>
           </li>
           <li class="MiddleItem">
-            <img class="MiddleIco" src="img/6.svg" />
+            <img class="MiddleIco" src="./img/6.svg" />
             <p>Eggplant P/O</p>
           </li>
           <li class="MiddleItem">
-            <img class="MiddleIco" src="img/7.svg" />
+            <img class="MiddleIco" src="./img/7.svg" />
             <p>Ornamental Sunflower</p>
           </li>
         </ul>
@@ -112,22 +112,22 @@
             <div id="block-first">
               <div id="block-first-first">
                 <h1>Vision</h1>
-                <img src="img/cross.svg" />
+                <img src="./img/cross.svg" />
                 <p>
                   We believe in long-term growth with an emphasis on the
                   potential of emerging markets. We also support the global need
                   of feeding the growing population.
                 </p>
               </div>
-              <img id="first-img" src="img/image 3.png" />
+              <img id="first-img" src="./img/image 3.png" />
             </div>
             <div id="block-second">
-              <div id="img-content-second">
-                <img src="img/image 2.png" />
+              <div id="./img-content-second">
+                <img src="./img/image 2.png" />
               </div>
               <div id="block-second-first">
                 <h1>Mission</h1>
-                <img src="img/cross.svg" />
+                <img src="./img/cross.svg" />
                 <p>
                   Breeding and marketing seeds for advanced field crops and
                   vegetable varieties that provide an added value to all supply
@@ -139,34 +139,34 @@
         </div>
         <div class="content-second">
           <h1>Agridera's main activities</h1>
-          <img src="img/cross.svg" />
+          <img src="./img/cross.svg" />
           <div id="content-second-block">
             <div>
               <figure>
-                <img src="img/image 4.png" />
+                <img src="./img/image 4.png" />
                 <figcaption>Open field crop seeds</figcaption>
               </figure>
-              <img src="img/line.svg" />
+              <img src="./img/line.svg" />
               <p id="figure-1">
                 wheat, cotton, legumes, hybrid confection sunflower
               </p>
             </div>
             <div>
               <figure>
-                <img src="img/image 5.png" />
+                <img src="./img/image 5.png" />
                 <figcaption>Vegetable seeds</figcaption>
               </figure>
-              <img src="img/line.svg" />
+              <img src="./img/line.svg" />
               <p id="figure-2">
                 hybrid open field tomatoes, eggplant, onion, paprika, etc.
               </p>
             </div>
             <div>
               <figure>
-                <img src="img/image 6.png" />
+                <img src="./img/image 6.png" />
                 <figcaption>Ornamental seeds</figcaption>
               </figure>
-              <img class="LowerIcons" src="img/line.svg" />
+              <img class="LowerIcons" src="./img/line.svg" />
               <p id="figure-3">
                 hybrid cut sunflowers, hybrid patio tomatoes, Bells of Irland,
                 etc.
@@ -191,11 +191,11 @@
           </div>
 
           <div id="icons">
-            <a href="#"><img src="img/Ico_fb.svg" alt="" /></a>
-            <a href="#"><img src="img/Ico_inst.svg" alt="" /></a>
-            <a href="#"><img src="img/Ico_tube.svg" alt="" /></a>
-            <a href="#"><img src="img/Ico_tw.svg" alt="" /></a>
-            <a href="#"><img src="img/linkedin 5 4.svg" alt="" /></a>
+            <a href="#"><img src="./img/Ico_fb.svg" alt="" /></a>
+            <a href="#"><img src="./img/Ico_inst.svg" alt="" /></a>
+            <a href="#"><img src="./img/Ico_tube.svg" alt="" /></a>
+            <a href="#"><img src="./img/Ico_tw.svg" alt="" /></a>
+            <a href="#"><img src="./img/linkedin 5 4.svg" alt="" /></a>
           </div>
         </div>
         <div id="footer_second">
