--- a/index1.html
+++ b/index1.html
@@ -37,12 +37,12 @@
               <img class="SearchIcon" src="./img/751463.png" />
             </div>
             <ul class="Menu">
-              <li class="MenuItem"><a href="/index.html">Home</a></li>
+              <li class="MenuItem"><a href="index.html">Home</a></li>
               <li class="MenuItem">Company Profile</li>
-              <li class="MenuItem"><a href="/index1.html"></a>Products</li>
+              <li class="MenuItem"><a href="index1.html"></a>Products</li>
               <li class="MenuItem">Services</li>
               <li class="MenuItem">R&D</li>
-              <li class="MenuItem"><a href="/index3.html"></a>Contact</li>
+              <li class="MenuItem"><a href="index2.html"></a>Contact</li>
             </ul>
           </div>
         </div>
