--- a/index2.html
+++ b/index2.html
@@ -37,12 +37,12 @@
               <img class="SearchIcon" src="./img/751463.png" />
             </div>
             <ul class="Menu">
-              <li class="MenuItem"><a href="/index.html">Home</a></li>
+              <li class="MenuItem"><a href="index.html">Home</a></li>
               <li class="MenuItem">Company Profile</li>
               <li class="MenuItem">Products</li>
               <li class="MenuItem">Services</li>
               <li class="MenuItem">R&D</li>
-              <li class="MenuItem"><a href="/index3.html">Contact</a></li>
+              <li class="MenuItem"><a href="index3.html">Contact</a></li>
             </ul>
           </div>
         </div>
