--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8" />
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.8"></script>
 
-
     <title>Homepage</title>
     <link
       rel="stylesheet"
@@ -61,10 +60,10 @@
             <ul class="Menu">
               <li class="MenuItem">Home</li>
               <li class="MenuItem">Company Profile</li>
-              <li class="MenuItem"><a href="/index1.html">Products</a></li>
+              <li class="MenuItem"><a href="index1.html">Products</a></li>
               <li class="MenuItem">Services</li>
               <li class="MenuItem">R&D</li>
-              <li class="MenuItem"><a href="/index3.html">Contact</a></li>
+              <li class="MenuItem"><a href="index3.html">Contact</a></li>
             </ul>
           </div>
         </div>
