--- a/index1.html
+++ b/index1.html
@@ -28,13 +28,13 @@
       <div class="header-all">
         <div class="head">
           <div class="top-logo-img">
-            <img class="burger-menu" src="./img/menu.svg" />
-            <img class="logotip" src="./img/logo.png" />
+            <img class="burger-menu" src="menu.svg" />
+            <img class="logotip" src="logo.png" />
           </div>
           <div class="HeadSearch">
             <div class="search">
               <input class="SearchInput" type="text" placeholder="Search" />
-              <img class="SearchIcon" src="./img/751463.png" />
+              <img class="SearchIcon" src="751463.png" />
             </div>
             <ul class="Menu">
               <li class="MenuItem"><a href="index.html">Home</a></li>
@@ -67,10 +67,10 @@
               </strong>
             </h1>
             <p>
-              <img src="./img/cross.svg" />
+              <img src="cross.svg" />
             </p>
             <div class="red-text">
-              <img src="./img/Group 17.png" />
+              <img src="Group 17.png" />
               <p>
                 Very high yield and<br />
                 excellent fruits quality!
@@ -94,7 +94,7 @@
             </ul>
           </div>
           <div class="right-text">
-            <img width="540px" height="498px" src="./img/tomato-3-2.svg" />
+            <img width="540px" height="498px" src="tomato-3-2.svg" />
             <div class="download-block">
               <button>
                 <i class="fa-solid fa-file-pdf fa-2xl"></i>
@@ -128,11 +128,11 @@
           </div>
 
           <div id="icons">
-            <a href="#"><img src="./img/Ico_fb.svg" alt="" /></a>
-            <a href="#"><img src="./img/Ico_inst.svg" alt="" /></a>
-            <a href="#"><img src="./img/Ico_tube.svg" alt="" /></a>
-            <a href="#"><img src="./img/Ico_tw.svg" alt="" /></a>
-            <a href="#"><img src="./img/linkedin 5 4.svg" alt="" /></a>
+            <a href="#"><img src="Ico_fb.svg" alt="" /></a>
+            <a href="#"><img src="Ico_inst.svg" alt="" /></a>
+            <a href="#"><img src="Ico_tube.svg" alt="" /></a>
+            <a href="#"><img src="Ico_tw.svg" alt="" /></a>
+            <a href="#"><img src="linkedin 5 4.svg" alt="" /></a>
           </div>
         </div>
         <div id="footer_second">
