--- a/index2.html
+++ b/index2.html
@@ -28,13 +28,13 @@
       <div class="header-all">
         <div class="head">
           <div class="top-logo-img">
-            <img class="burger-menu" src="./img/menu.svg" />
-            <img class="logotip" src="./img/logo.png" />
+            <img class="burger-menu" src="menu.svg" />
+            <img class="logotip" src="logo.png" />
           </div>
           <div class="HeadSearch">
             <div class="search">
               <input class="SearchInput" type="text" placeholder="Search" />
-              <img class="SearchIcon" src="./img/751463.png" />
+              <img class="SearchIcon" src="751463.png" />
             </div>
             <ul class="Menu">
               <li class="MenuItem"><a href="index.html">Home</a></li>
@@ -47,12 +47,12 @@
           </div>
         </div>
       </div>
-<img style="width: 100%; height: 480px"  src="./img/image 7.png" />
+<img style="width: 100%; height: 480px"  src="image 7.png" />
       
       <div class="middle-all">
         <div class="textBlock">
           <h4>Agridera Fresh Market Tomato Hybrids</h4>
-          <img style="width: 35px; height: 35px" src="./img/cross.svg" />
+          <img style="width: 35px; height: 35px" src="cross.svg" />
           <p>
             Agridera aims to be one of the world's leading companies in the
             breeding, production, and marketing of tomato seeds. We invest
@@ -128,7 +128,7 @@
                   TAG 1000 (TAG 853)<br />
                   Tomato Determinate Red Standard Round
                 </p>
-                <img src="./img/tomato-1.svg" />
+                <img src="tomato-1.svg" />
               </div>
             </figure>
             <figure id="tomato">
@@ -137,7 +137,7 @@
                   TAG 1000 (TAG 853)<br />
                   Tomato Determinate Red Standard Round
                 </p>
-                <img src="./img/tomato-2.svg" />
+                <img src="tomato-2.svg" />
               </div>
             </figure>
             <figure id="tomato">
@@ -147,7 +147,7 @@
                     TAG 1000 (TAG 853)<br />
                     Tomato Determinate Red Standard Round
                   </p>
-                  <img src="./img/tomato-3.svg" />
+                  <img src="tomato-3.svg" />
                 </a>
               </div>
             </figure>
@@ -156,7 +156,7 @@
                 <p>
                   TAG 1000 (TAG 853)<br />Tomato Determinate Red Standard Round
                 </p>
-                <img src="./img/tomato-4.svg" />
+                <img src="tomato-4.svg" />
               </div>
             </figure>
             <figure id="tomato">
@@ -165,7 +165,7 @@
                   TAG 1000 (TAG 853)<br />
                   Tomato Determinate Red Standard Round
                 </p>
-                <img src="./img/tomato-5.svg" />
+                <img src="tomato-5.svg" />
               </div>
             </figure>
             <figure id="tomato">
@@ -174,7 +174,7 @@
                   TAG 1000 (TAG 853)<br />
                   Tomato Determinate Red Standard Round
                 </p>
-                <img src="./img/tomato-6.svg" />
+                <img src="tomato-6.svg" />
               </div>
             </figure>
             <figure id="tomato">
@@ -183,7 +183,7 @@
                   TAG 1000 (TAG 853)<br />
                   Tomato Determinate Red Standard Round
                 </p>
-                <img src="./img/tomato-7.svg" />
+                <img src="tomato-7.svg" />
               </div>
             </figure>
             <figure id="tomato">
@@ -192,7 +192,7 @@
                   TAG 1000 (TAG 853)<br />
                   Tomato Determinate Red Standard Round
                 </p>
-                <img src="./img/tomato-8.svg" />
+                <img src="tomato-8.svg" />
               </div>
             </figure>
           </div>
@@ -213,11 +213,11 @@
           </div>
 
           <div id="icons">
-            <a href="#"><img src="./img/Ico_fb.svg" alt="" /></a>
-            <a href="#"><img src="./img/Ico_inst.svg" alt="" /></a>
-            <a href="#"><img src="./img/Ico_tube.svg" alt="" /></a>
-            <a href="#"><img src="./img/Ico_tw.svg" alt="" /></a>
-            <a href="#"><img src="./img/linkedin 5 4.svg" alt="" /></a>
+            <a href="#"><img src="Ico_fb.svg" alt="" /></a>
+            <a href="#"><img src="Ico_inst.svg" alt="" /></a>
+            <a href="#"><img src="Ico_tube.svg" alt="" /></a>
+            <a href="#"><img src="Ico_tw.svg" alt="" /></a>
+            <a href="#"><img src="linkedin 5 4.svg" alt="" /></a>
           </div>
         </div>
         <div id="footer_second">
