--- a/index3.html
+++ b/index3.html
@@ -28,13 +28,13 @@
       <div class="header-all">
         <div class="head">
           <div class="top-logo-img">
-            <img class="burger-menu" src="./img/menu.svg" />
-            <img class="logotip" src="./img/logo.png" />
+            <img class="burger-menu" src="menu.svg" />
+            <img class="logotip" src="logo.png" />
           </div>
           <div class="HeadSearch">
             <div class="search">
               <input class="SearchInput" type="text" placeholder="Search" />
-              <img class="SearchIcon" src="./img/751463.png" />
+              <img class="SearchIcon" src="751463.png" />
             </div>
             <ul class="Menu">
               <li class="MenuItem"><a href="index.html">Home</a></li>
@@ -47,10 +47,10 @@
           </div>
         </div>
       </div>
-      <img style="width: 100%; height: 480px" src="./img/image 7.jpg" />
+      <img style="width: 100%; height: 480px" src="image 7.jpg" />
       <div class="contant-contact">
         <h1>Contact us</h1>
-        <img style="margin-bottom: 49px" src="./img/xrest.png" />
+        <img style="margin-bottom: 49px" src="xrest.png" />
         <form class="content-anketa">
           <div class="left-content">
             <label>Name *</label><br />
@@ -81,7 +81,7 @@
             <textarea class="input3" type="text"></textarea><br />
             <label>Please type this code</label><br />
             <div class="sumbit-kapcha">
-              <img class="kaptcha" src="./img/image 12.png" />
+              <img class="kaptcha" src="image 12.png" />
               <input class="input4" type="text" />
               <button type="submit">Send message</button>
             </div>
@@ -113,11 +113,11 @@
           </div>
 
           <div id="icons">
-            <a href="#"><img src="./img/Ico_fb.svg" alt="" /></a>
-            <a href="#"><img src="./img/Ico_inst.svg" alt="" /></a>
-            <a href="#"><img src="./img/Ico_tube.svg" alt="" /></a>
-            <a href="#"><img src="./img/Ico_tw.svg" alt="" /></a>
-            <a href="#"><img src="./img/linkedin 5 4.svg" alt="" /></a>
+            <a href="#"><img src="Ico_fb.svg" alt="" /></a>
+            <a href="#"><img src="Ico_inst.svg" alt="" /></a>
+            <a href="#"><img src="Ico_tube.svg" alt="" /></a>
+            <a href="#"><img src="Ico_tw.svg" alt="" /></a>
+            <a href="#"><img src="linkedin 5 4.svg" alt="" /></a>
           </div>
         </div>
         <div id="footer_second">
