--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     />
     <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="responsive.css" />
+    <link rel="stylesheet" href="main.js" />
   </head>
 
   <body>
@@ -60,10 +61,10 @@
             <ul class="Menu">
               <li class="MenuItem">Home</li>
               <li class="MenuItem">Company Profile</li>
-              <li class="MenuItem"><a href="index1.html">Products</a></li>
+              <li class="MenuItem"><a href="/index1.html">Products</a></li>
               <li class="MenuItem">Services</li>
               <li class="MenuItem">R&D</li>
-              <li class="MenuItem"><a href="index3.html">Contact</a></li>
+              <li class="MenuItem"><a href="/index3.html">Contact</a></li>
             </ul>
           </div>
         </div>
