--- a/index1.html
+++ b/index1.html
@@ -94,7 +94,7 @@
             </ul>
           </div>
           <div class="right-text">
-            <img width="540px" height="498px" src="/tomato-3-2.svg" />
+            <img width="540px" height="498px" src="tomato-3-2.svg" />
             <div class="download-block">
               <button>
                 <i class="fa-solid fa-file-pdf fa-2xl"></i>
