--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="responsive.css" />
     <link rel="stylesheet" href="main.js" />
+    <link rel="manifest" href="/manifest.json" />
   </head>
 
   <body>
@@ -51,20 +52,28 @@
         <div class="head">
           <div class="top-logo-img">
             <img class="burger-menu" src="menu.svg" />
-            <img class="logotip" src="logo.png" />
-          </div>
+            <img class="logotip" src="logo.png" /> 
+          </div>         
           <div class="HeadSearch">
             <div class="search">
               <input class="SearchInput" type="text" placeholder="Search" />
               <img class="SearchIcon" src="ico_search.png" />
             </div>
             <ul class="Menu">
-              <li class="MenuItem">Home</li>
-              <li class="MenuItem">Company Profile</li>
-              <li class="MenuItem"><a href="/index1.html">Products</a></li>
-              <li class="MenuItem">Services</li>
-              <li class="MenuItem">R&D</li>
-              <li class="MenuItem"><a href="/index3.html">Contact</a></li>
+              <li style="text-align:right;"></li>
+              <li class="MenuItem">
+                <a href="/index.html">Home</a></li>
+              <li class="MenuItem">
+                <a href="/index.html">Company Profile</a></li>
+              <li class="MenuItem">
+                <a href="/index1.html">Products</a></li>
+              <li class="MenuItem">
+                <a href="/index.html">
+                  <a href="/index.html">Services</a></li>
+              <li class="MenuItem">
+                <a href="/index.html">R&D</a></li>
+              <li class="MenuItem">
+                <a href="/index3.html">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -180,13 +189,13 @@
         <div id="footer_first">
           <div>
             <ul>
-              <li><a href="#">Profile</a></li>
+              <li><a href="/index.html">Profile</a></li>
               <li><a href="#">Managment</a></li>
-              <li><a href="#">Products</a></li>
+              <li><a href="/index1.html">Products</a></li>
               <li><a href="#">R&D</a></li>
               <li><a href="#">Links</a></li>
               <li><a href="#">Sitemap</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="/index3.html">Contact</a></li>
             </ul>
           </div>
 
