--- a/index2.html
+++ b/index2.html
@@ -191,13 +191,13 @@
         <div id="footer_first">
           <div>
             <ul>
-              <li><a href="#">Profile</a></li>
+              <li><a href="/index.html">Profile</a></li>
               <li><a href="#">Managment</a></li>
-              <li><a href="#">Products</a></li>
+              <li><a href="/index1.html">Products</a></li>
               <li><a href="#">R&D</a></li>
               <li><a href="#">Links</a></li>
               <li><a href="#">Sitemap</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="/index3.html">Contact</a></li>
             </ul>
           </div>
 
