--- a/index2.html
+++ b/index2.html
@@ -41,7 +41,7 @@
             <ul class="Menu">
               <li class="MenuItem"><a href="index.html">Home</a></li>
               <li class="MenuItem">Company Profile</li>
-              <li class="MenuItem">Products</li>
+              <li class="MenuItem"><a href="index1.html">Products</a></li>
               <li class="MenuItem">Services</li>
               <li class="MenuItem">R&D</li>
               <li class="MenuItem"><a href="index3.html">Contact</a></li>
@@ -64,11 +64,11 @@
             different markets globally.
           </p>
           <p>
-            Currently, emphasis is placed on combining Tomato Yellow Leaf Curl
-            Virus (TYLCV) and Tomato Spotted Wilt Virus (TSWV) resistances with
-            other soil borne diseases into superior tomato breeding lines and
+            Currently, emphasis is placed on combining Kiwi Yellow Leaf Curl
+            Virus (TYLCV) and Kiwi Spotted Wilt Virus (TSWV) resistances with
+            other soil borne diseases into superior kiwi breeding lines and
             hybrids. Moreover, comprehensive efforts are being undertaken to
-            develop varieties resistance to TBRFV virus (Tomato Brown Rugose
+            develop varieties resistance to TBRFV virus (Kiwi Brown Rugose
             Fruit Virus).
           </p>
           <p>
@@ -79,13 +79,13 @@
             in a variety of types, namely round and elongated shapes.
           </p>
           <div class="blockInText">
-            Agirdera Tomato breeding programs are focusing on three main
-            segments: Greenhouse Indeterminate Tomatoes, Open-field
-            Indeterminate Tomatoes, and Bush Type Open-field Tomatoes.
+            Agirdera Kiwi breeding programs are focusing on three main
+            segments: Greenhouse Indeterminate Kiwis, Open-field
+            Indeterminate Kiwis, and Bush Type Open-fieldKiwis.
           </div>
           <div class="sortTomato">
             <div id="sort1">
-              <h5><b>Greenhouse Tomato Breeding Program</b></h5>
+              <h5><b>Greenhouse Kiwi Breeding Program</b></h5>
               <hr />
               <p>
                 This breeding is aimed for the Spanish and Turkish markets. For
@@ -96,7 +96,7 @@
               </p>
             </div>
             <div id="sort2">
-              <h5><b>Open-field Indeterminate Tomatoes</b></h5>
+              <h5><b>Open-field Indeterminate Kiwi</b></h5>
               <hr />
               <p>
                 This breeding is for Brazilian, Moroccan, and Turkish markets.
@@ -107,7 +107,7 @@
               </p>
             </div>
             <div id="sort3">
-              <h5><b>Open-field Bush Type Tomatoes</b></h5>
+              <h5><b>Open-field Bush Type Kiwi</b></h5>
               <hr />
               <p>
                 This breeding is for Mediterranean markets. We breed round and
@@ -126,14 +126,13 @@
           <div class="kiwiList col-md-12">
             <div class="row">
               <div class="kiwiItem col-md-4" v-if="products" v-for="p in products">
+                <a :href="'index2.html#'+p.id">
                 <div class="col-md-12">
                   <div class="kiwiImg">
                     <img src="1.jpg" alt="">
                   </div>
                   <div class="kiwiInfo">
-                    <b style="font-size: 20px; line-height: 28px;">TAG 1000 (TAG 853)</b>
-                    <br>
-                    Kiwi Green Standard Round
+                    <b style="font-size: 20px; line-height: 28px;"><a href="/index1.html">Kiwi Green Standard Round</a></b>
                   </div>
                 </div>
               </div>
@@ -143,9 +142,7 @@
                     <img src="2.jpg" alt="">
                   </div>
                   <div class="kiwiInfo">
-                    <b style="font-size: 20px; line-height: 28px;">TAG 1000 (TAG 853)</b>
-                    <br>
-                    Kiwi Green Standard Round
+                    <b style="font-size: 20px; line-height: 28px;"> <a href="/index1.html">Kiwi Green Standard Round</a></b>
                   </div>
                 </div>
               </div>
@@ -155,9 +152,7 @@
                     <img src="3.jpg" alt="">
                   </div>
                   <div class="kiwiInfo">
-                    <b style="font-size: 20px; line-height: 28px;">TAG 1000 (TAG 853)</b>
-                    <br>
-                    Kiwi Green Standard Round
+                    <b style="font-size: 20px; line-height: 28px;"> <a href="/index1.html">Kiwi Green Standard Round</a></b>
                   </div>
                 </div>
               </div>
@@ -167,9 +162,7 @@
                     <img src="4.jpg" alt="">
                   </div>
                   <div class="kiwiInfo">
-                    <b style="font-size: 20px; line-height: 28px;">TAG 1000 (TAG 853)</b>
-                    <br>
-                    Kiwi Green Standard Round
+                    <b style="font-size: 20px; line-height: 28px;"><a href="/index1.html">Kiwi Green Standard Round</a></b>
                   </div>
                 </div>
               </div>
@@ -179,9 +172,7 @@
                     <img src="5.jpg" alt="">
                   </div>
                   <div class="kiwiInfo">
-                    <b style="font-size: 20px; line-height: 28px;">TAG 1000 (TAG 853)</b>
-                    <br>
-                    Kiwi Green Standard Round
+                    <b style="font-size: 20px; line-height: 28px;"> <a href="/index1.html">Kiwi Green Standard Round</a></b>
                   </div>
                 </div>
               </div>
