--- a/index1.html
+++ b/index1.html
@@ -53,7 +53,7 @@
             <p>
               <a href="/index2.html">
                 <i class="fa-solid fa-arrow-left"></i>
-                Return to all tomatoes
+                Return to all kiwi
               </a>
             </p>
           </div>
@@ -63,7 +63,7 @@
             <h1 style="font-weight: 700">
               TAG 1002 (TAG 809)<br />
               <strong style="color: #57984c"
-                >Tomato Determinate Red Standard Round
+                >Kiwi Determinate Green Standard Round
               </strong>
             </h1>
             <p>
@@ -94,12 +94,13 @@
             </ul>
           </div>
           <div class="right-text">
-            <img width="540px" height="498px" src="tomato-3-2.svg" />
+            <img width="540px" height="498px" src="/34.jpg" />
             <div class="download-block">
-              <button>
-                <i class="fa-solid fa-file-pdf fa-2xl"></i>
-                Download PDF
+              <a href="/index3.html"></a>
+              <button src="/index3.html">
+                Add to cart
               </button>
+             
             </div>
             <p class="characteristics"><b>Cycle</b></p>
             <ul>
@@ -108,7 +109,7 @@
               <li><p>Winter</p></li>
             </ul>
             <p class="characteristics"><b>Color</b></p>
-            <p>Red</p>
+            <p>Green</p>
           </div>
         </div>
       </div>
